gccida/g1/debug_ready_list
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/debug_ready_list/src/haifa-sched.c:1991:22: error: use of undeclared identifier 'asc_661610'
fprintf( sched_dump, asc_661610, v4); 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/debug_ready_list/src/obj/haifa-sched.o] Error 1
